Initial EDA complete

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -49,7 +49,7 @@
     "\n",
     "- **Core packages were installed**:\n",
     "  ```bash\n",
-    "  pip install pandas numpy matplotlib seaborn scikit-learn jupyter\n",
+    "  pip install pandas pandasql numpy matplotlib seaborn scikit-learn jupyter \n",
     "\n",
     "- **VS Code’s built-in Jupyter support was used by creating eda.ipynb**\n"
    ]
@@ -64,13 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "id": "f87ca44b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Necessary libraries were imported:\n",
     "import pandas as pd  # For data manipulation\n",
+    "import pandasql as psql # SQL Querying\n",
     "import numpy as np   # For numerical operations\n",
     "import matplotlib.pyplot as plt  # For plotting\n",
     "import seaborn as sns  # For enhanced visualizations"
@@ -265,26 +266,108 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3744095028.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[20]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mgit add .\u001b[39m\n        ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main (root-commit) 708573d] Initial EDA complete\n",
+      " 1 file changed, 304 insertions(+)\n",
+      " create mode 100644 eda.ipynb\n"
      ]
     }
    ],
    "source": [
-    "# The notebook was saved and initial changes were committed to Git (Bash command):\n",
+    "# The notebook was saved and initial changes were committed to Git (/bash):\n",
     "!git add .\n",
     "!git commit -m \"Initial EDA complete\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ebb2c36",
+   "metadata": {},
+   "source": [
+    "##### Step 5. Adding SQL Querying for Practice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "ff5c6723",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pandasql was imported to simulate SQL queries on the DataFrame:\n",
+    "from pandasql import sqldf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7fcec1eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# An example query was executed to calculate average measurements by species:\n",
+    "query = \"\"\"\n",
+    "SELECT species, AVG(sepal_length) as avg_sepal_length, AVG(petal_length) as avg_petal_length\n",
+    "FROM df\n",
+    "GROUP BY species\n",
+    "\"\"\"\n",
+    "result = sqldf(query)\n",
+    "print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b386f95b",
+   "metadata": {},
+   "source": [
+    "##### Step 6. Wrapping Up and Preparing for GitHub"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c35a453a",
+   "metadata": {},
+   "source": [
+    "- Project overview was summarized:\n",
+    "\n",
+    "    - Simple EDA on Iris dataset using Python, Pandas, and Seaborn.\n",
+    "    - Demonstrates data loading, cleaning, visualization, and deriving insights.\n",
+    "\n",
+    "- Setup instructions were provided:\n",
+    "\n",
+    "    - Clone repo: git clone [your-repo-url]\n",
+    "    - Activate virtual environment: source venv/bin/activate\n",
+    "    - Run notebook: jupyter notebook eda.ipynb\n",
+    "\n",
+    "- Key skills demonstrated:\n",
+    "\n",
+    "    - Data analytics with Python\n",
+    "    - Data visualization\n",
+    "    - Basic SQL querying\n",
+    "\n",
+    "- Insights were summarized from previous steps."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b28bc375",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Changes were pushed to GitHub (/bash):\n",
+    "!git remote add origin [url]\n",
+    "!git push -u origin main\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (venv)",
+   "display_name": "Iris EDA (venv)",
    "language": "python",
-   "name": "venv"
+   "name": "iris_eda"
   },
   "language_info": {
    "codemirror_mode": {
