Updated eda.ipynb with latest changes

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "id": "f87ca44b",
    "metadata": {},
    "outputs": [],
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4e3e60f4",
    "metadata": {},
    "outputs": [
@@ -269,9 +269,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main (root-commit) 708573d] Initial EDA complete\n",
-      " 1 file changed, 304 insertions(+)\n",
-      " create mode 100644 eda.ipynb\n"
+      "[main 0f10483] Initial EDA complete\n",
+      " 1 file changed, 93 insertions(+), 10 deletions(-)\n"
      ]
     }
    ],
@@ -326,6 +325,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16aeac56",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "c35a453a",
    "metadata": {},
@@ -361,6 +368,14 @@
     "!git remote add origin [url]\n",
     "!git push -u origin main\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b579075b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
