Initial EDA complete

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -49,7 +49,7 @@
     "\n",
     "- **Core packages were installed**:\n",
     "  ```bash\n",
-    "  pip install pandas pandasql numpy matplotlib seaborn scikit-learn jupyter \n",
+    "  pip install pandas pandasql numpy matplotlib seaborn plotly jupyter \n",
     "\n",
     "- **VS Code’s built-in Jupyter support was used by creating eda.ipynb**\n"
    ]
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "f87ca44b",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,8 @@
     "import pandasql as psql # SQL Querying\n",
     "import numpy as np   # For numerical operations\n",
     "import matplotlib.pyplot as plt  # For plotting\n",
-    "import seaborn as sns  # For enhanced visualizations"
+    "import seaborn as sns  # For enhanced visualizations\n",
+    "import plotly.express as px  # For interactive visualizations"
    ]
   },
   {
@@ -244,6 +245,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "040bca02",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "7c33f436",
    "metadata": {},
@@ -257,6 +266,32 @@
     "  - Versicolor and Virginica overlap more, requiring more advanced models for separation.\n",
     "\n",
     "Pairplot shows clear clusters by species; Heatmap confirms high petal correlations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "541ad47c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# 3D Scatter Plot with Plotly\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mplotly\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mexpress\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpx\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m fig = px.scatter_3d(\u001b[43mdf\u001b[49m, x=\u001b[33m'\u001b[39m\u001b[33mpetal_length\u001b[39m\u001b[33m'\u001b[39m, y=\u001b[33m'\u001b[39m\u001b[33mpetal_width\u001b[39m\u001b[33m'\u001b[39m, z=\u001b[33m'\u001b[39m\u001b[33msepal_length\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m      4\u001b[39m                     color=\u001b[33m'\u001b[39m\u001b[33mspecies\u001b[39m\u001b[33m'\u001b[39m, title=\u001b[33m'\u001b[39m\u001b[33m3D Scatter Plot of Iris Features\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      5\u001b[39m fig.show()\n",
+      "\u001b[31mNameError\u001b[39m: name 'df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# 3D Scatter Plot with Plotly\n",
+    "import plotly.express as px\n",
+    "fig = px.scatter_3d(df, x='petal_length', y='petal_width', z='sepal_length',\n",
+    "                    color='species', title='3D Scatter Plot of Iris Features')\n",
+    "fig.show()"
    ]
   },
   {
@@ -326,11 +361,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "16aeac56",
+   "execution_count": 6,
+   "id": "c2832439",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EDA complete. Ready for GitHub!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Project Summary\n",
+    "# This EDA on the Iris dataset explored patterns in sepal and petal mesurements.\n",
+    "# Key findings: Petal length/width strongly distinguish Setosa; Versicolor/Virginica overlap.\n",
+    "# Tools: Python (Pandas, Seaborn, Plotly), SQL (pandaSQL), visualisations (30 scatter, pairplot, heatmap)\n",
+    "print(\"EDA complete. Ready for GitHub!\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
