Added README.md and finalized EDA notebook

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -197,6 +197,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "54da6672",
+   "metadata": {},
+   "source": [
+    "Key insights were derived from Boxplots:\n",
+    "- Iris dataset had 3 duplicates, removed for clean analysis.\n",
+    "- Species counts are balanced: 48 Setosa, 49 Virginica, 50 Versicolor after deduplication.\n",
+    "- Petal_length and petal_width have wider ranges and higher medians, indicating stronger variation.\n",
+    "- Sepal_width shows an outlier (low value), but minimal overall, supporting no major data cleaning needed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c581c1a2",
    "metadata": {},
    "source": [
@@ -205,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "id": "4d3cbbf3",
    "metadata": {},
    "outputs": [
@@ -245,19 +257,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "040bca02",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "7c33f436",
    "metadata": {},
    "source": [
-    "Key insights were derived:\n",
+    "Key insights were derived from the Pairplot & the Heatmap :\n",
     "\n",
     "  - Petal length and width strongly correlate (0.96), useful for classification.\n",
     "\n",
@@ -270,15 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "89b0df2e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "67117360",
    "metadata": {},
    "outputs": [
@@ -1203,8 +1199,7 @@
    "id": "57b8272a",
    "metadata": {},
    "source": [
-    "\n",
-    "Key insights from the 3D Scatter Plot were derived:\n",
+    "Key insights were derived from the 3D scatter plot::\n",
     "- Iris-setosa forms a distinct, tight cluster with lower petal_length and petal_width.\n",
     "- Iris-versicolor and Iris-virginica show overlapping regions, especially in mid-range sepal_length.\n",
     "- The 3D view highlights separation along petal dimensions, supporting petal-based classification.\n"
@@ -1212,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "id": "4e3e60f4",
    "metadata": {},
    "outputs": [
@@ -1220,8 +1215,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 17e632b] Initial EDA complete\n",
-      " 1 file changed, 56 insertions(+), 7 deletions(-)\n"
+      "[main 76c09f8] Initial EDA complete\n",
+      " 1 file changed, 967 insertions(+), 27 deletions(-)\n"
      ]
     }
    ],
@@ -1241,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "id": "ff5c6723",
    "metadata": {},
    "outputs": [],
@@ -1252,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "id": "7fcec1eb",
    "metadata": {},
    "outputs": [
@@ -1288,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "id": "c2832439",
    "metadata": {},
    "outputs": [
@@ -1335,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "id": "b28bc375",
    "metadata": {},
    "outputs": [
@@ -1357,14 +1352,6 @@
     "!git remote add origin [url]\n",
     "!git push -u origin main\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b579075b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
