Removed outdated content from notebook

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -64,14 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "f87ca44b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Necessary libraries were imported:\n",
     "import pandas as pd  # For data manipulation\n",
-    "import pandasql as psql # SQL Querying\n",
+    "from pandasql import sqldf # SQL Querying\n",
     "import numpy as np   # For numerical operations\n",
     "import matplotlib.pyplot as plt  # For plotting\n",
     "import seaborn as sns  # For enhanced visualizations\n",
