Ensuring 3D Scatter Plot is included

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 40,
    "id": "f87ca44b",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 41,
    "id": "692a5dcd",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 42,
    "id": "82379f77",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 43,
    "id": "b401b8d0",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 44,
    "id": "4d3cbbf3",
    "metadata": {},
    "outputs": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 45,
    "id": "1f9ff2ed",
    "metadata": {},
    "outputs": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 46,
    "id": "67117360",
    "metadata": {},
    "outputs": [
@@ -1194,7 +1194,8 @@
     }
    ],
    "source": [
-    "# 3D Scatter Plot with Plotly\n",
+    "# Improved 3D Scatter Plot with Plotly\n",
+    "import plotly.express as px\n",
     "fig = px.scatter_3d(df, x='petal_length', y='petal_width', z='sepal_length',\n",
     "                    color='species', title='3D Scatter Plot of Iris Features',\n",
     "                    size_max=10, opacity=0.7, width=800, height=600)\n",
@@ -1223,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 47,
    "id": "7fcec1eb",
    "metadata": {},
    "outputs": [
